--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 <div id="container">
 	<div id="header">
 		<h1>
-			Site name
+			Le domaine des dieux 
 		</h1>
 	</div>
-<!--	<div id="navigation">
+	<div id="navigation">
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Services</a></li>
 			<li><a href="#">Contact us</a></li>
 		</ul>
-	</div>
--->
+	</div> 
 	<div id="edito">
 		<h2>
 			Edito
